--- a/aws-ubuntu14.04/Vagrantfile
+++ b/aws-ubuntu14.04/Vagrantfile
@@ -6,6 +6,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "dummy"
+  config.vm.box_url = "https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box"
 
   config.vm.provider :aws do |aws, override|
     aws.access_key_id     = ENV['AWS_ACCESS_KEY_ID']
