--- a/centos6.5/Vagrantfile
+++ b/centos6.5/Vagrantfile
@@ -7,6 +7,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "centos6.5"
+  config.vm.hostname = "centos-default"
 
   # VMのスペックを設定
   # ディスクを追加する
