--- a/ubuntu14.04/Vagrantfile
+++ b/ubuntu14.04/Vagrantfile
@@ -7,6 +7,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu14.04"
+  config.vm.hostname = "ubuntu-default"
 
   # VMのスペックを設定
   # ディスクを追加する
