--- a/aws-ubuntu14.04/Vagrantfile
+++ b/aws-ubuntu14.04/Vagrantfile
@@ -14,9 +14,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     aws.secret_access_key = ENV['AWS_SECRET_ACCESS_KEY']
     aws.keypair_name      = "aws-duck1218-key"
 
-    aws.ami             = "ami-a1124fa0"
+    aws.ami             = "ami-e74b60e6"
     aws.instance_type   = "t2.micro"
-    aws.security_groups = [ 'security-group-all' ]
+    aws.security_groups = [ 'Vagrant-SG' ]
     aws.region          = "ap-northeast-1"
 
     override.ssh.username         = "ubuntu"
