--- a/digitalocean-ubuntu14.04/Vagrantfile
+++ b/digitalocean-ubuntu14.04/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     provider.client_id            = ENV['DO_CLIENT_ID']
     provider.api_key              = ENV['DO_API_KEY']
     provider.token                = ENV['DO_TOKEN']
-    provider.image                = 'Ubuntu 14.04 x64'
+    provider.image                = '14.04 x64'
     provider.region               = 'sgp1'
     provider.size                 = '512mb'
     provider.ssh_key_name         = 'geekduck'
