--- a/ubuntu14.04multiple/Vagrantfile
+++ b/ubuntu14.04multiple/Vagrantfile
@@ -7,11 +7,13 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define :web do |web|
     web.vm.box = "ubuntu14.04"
+    web.vm.hostname = "ubuntu.web.default"
     web.vm.network :private_network, ip:"192.168.50.11"
   end
 
   config.vm.define :web do |db|
     db.vm.box = "ubuntu14.04"
+    db.vm.hostname = "ubuntu.web.default"
     db.vm.network :private_network, ip:"192.168.50.12"
   end
 end
