--- a/centos/Vagrantfile
+++ b/centos/Vagrantfile
@@ -6,7 +6,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "centos7"
-  config.vm.hostname = "centos-default"
+  config.vm.hostname = "centos.default"
 
   # VMのスペックを設定
   # ディスクを追加する
