--- a/ubuntu15.10/Vagrantfile
+++ b/ubuntu15.10/Vagrantfile
@@ -6,7 +6,7 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "ubuntu15.10"
-  config.vm.hostname = "ubuntu-default"
+  config.vm.hostname = "ubuntu.default"
 
   # VMのスペックを設定
   # ディスクを追加する
