--- a/debian/Vagrantfile
+++ b/debian/Vagrantfile
@@ -1,6 +1,4 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
+# coding: utf-8
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 
@@ -19,5 +17,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.network :private_network, ip: "192.168.33.31"
   config.vm.network "forwarded_port", guest: 22, host: 30022
+
+  #config.vm.provision "ansible" do |ansible|
+  #  ansible.playbook = "ansible/site.yml"
+  #  ansible.inventory_path = "ansible/hosts"
+  #  ansible.limit = 'all'
+  #end
   config.vm.provision "shell", path: "script.sh"
 end
