--- a/ubuntu14.04multiple/Vagrantfile
+++ b/ubuntu14.04multiple/Vagrantfile
@@ -1,6 +1,3 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 
@@ -16,4 +13,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     db.vm.hostname = "ubuntu.web.default"
     db.vm.network :private_network, ip:"192.168.50.12"
   end
+
+  #config.vm.provision "ansible" do |ansible|
+  #  ansible.playbook = "ansible/site.yml"
+  #  ansible.inventory_path = "ansible/hosts"
+  #  ansible.limit = 'all'
+  #end
+
 end
