--- a/ubuntu14.04/Vagrantfile
+++ b/ubuntu14.04/Vagrantfile
@@ -17,6 +17,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.network :private_network, ip: "192.168.33.11"
   config.vm.network "forwarded_port", guest: 22, host: 10022
+  #config.ssh.insert_key = false
 
   #config.vm.provision "ansible" do |ansible|
   #  ansible.playbook = "ansible/site.yml"
