--- a/aws-amazonlinux/Vagrantfile
+++ b/aws-amazonlinux/Vagrantfile
@@ -1,27 +1,24 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
-VAGRANTFILE_API_VERSION = "2"
+VAGRANTFILE_API_VERSION = '2'
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "dummy"
-  config.vm.box_url = "https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box"
-  config.vm.hostname = "aws.amazonlinux.default"
+  config.vm.box = 'dummy'
+  config.vm.box_url = 'https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box'
+  config.vm.hostname = 'aws.amazonlinux.default'
 
   config.vm.provider :aws do |aws, override|
     aws.access_key_id     = ENV['AWS_ACCESS_KEY_ID']
     aws.secret_access_key = ENV['AWS_SECRET_ACCESS_KEY']
-    aws.keypair_name      = "aws-duck1218-key"
+    aws.keypair_name      = ENV['AWS_KEYPAIR_NAME']
 
-    aws.ami             = "ami-383c1956"
-    aws.instance_type   = "t2.micro"
-    aws.security_groups = [ 'Vagrant-SG' ]
-    aws.region          = "ap-northeast-1"
+    aws.ami             = 'ami-383c1956'
+    aws.instance_type   = 't2.micro'
+    aws.security_groups = ['Vagrant-SG']
+    aws.region          = 'ap-northeast-1'
 
-    override.ssh.username         = "ec2-user"
-    override.ssh.private_key_path = "~/.ssh/aws/aws-duck1218-key.pem"
+    override.ssh.username         = 'ec2-user'
+    override.ssh.private_key_path = ENV['AWS_PRIVATE_KEY_PATH']
   end
 
-  config.vm.provision "shell", path: "script.sh"
+  config.vm.provision 'shell', path: 'shell'
 end
