--- a/ubuntu14.04multiple/Vagrantfile
+++ b/ubuntu14.04multiple/Vagrantfile
@@ -1,24 +1,24 @@
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
-VAGRANTFILE_API_VERSION = "2"
+VAGRANTFILE_API_VERSION = '2'
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define :web do |web|
-    web.vm.box = "ubuntu14.04"
-    web.vm.hostname = "ubuntu.web.default"
-    web.vm.network :private_network, ip:"192.168.50.11"
+    web.vm.box = 'ubuntu14.04'
+    web.vm.hostname = 'ubuntu.web.default'
+    web.vm.network :private_network, ip:'192.168.50.11'
     #web.ssh.insert_key = false
   end
 
   config.vm.define :db do |db|
-    db.vm.box = "ubuntu14.04"
-    db.vm.hostname = "ubuntu.web.default"
-    db.vm.network :private_network, ip:"192.168.50.12"
+    db.vm.box = 'ubuntu14.04'
+    db.vm.hostname = 'ubuntu.web.default'
+    db.vm.network :private_network, ip:'192.168.50.12'
     #db.ssh.insert_key = false
   end
 
-  #config.vm.provision "ansible" do |ansible|
-  #  ansible.playbook = "ansible/site.yml"
-  #  ansible.inventory_path = "ansible/hosts"
+  #config.vm.provision 'ansible' do |ansible|
+  #  ansible.playbook = 'ansible/site.yml'
+  #  ansible.inventory_path = 'ansible/hosts'
   #  ansible.limit = 'all'
   #end
 
